--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <article class="event">
           <figure class="event-imageContainer">
-            <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+            <img class="event-image" src="images/platzi-conf.png" width="500" />
           </figure>
           <div class="event-detail">
             <h3 class="event-title">PlatziConf México 2018</h3>
